--- a/cars/.classpath
+++ b/cars/.classpath
@@ -28,5 +28,6 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="D:/javaframework_file/car/WebContent/WEB-INF/lib/spring-webmvc-4.1.0.RELEASE.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
